# Solana_Stablecoin

./: .env  Anchor.toml  README.md  new-keypair.json  new_wallet.json  package-lock.json  package.json
App/: setupProxy.js
App/dashboard/: README.md  package-lock.json  package.json  setupProxy.js
App/dashboard/public/: index.html
App/dashboard/src/: App.js  index.js  web3.js
App/dashboard/src/assets/: style.css
App/dashboard/src/assets/css/: style.css
App/dashboard/src/components/: Main.js  Mainbonds.js  Navbar.js  Nowallet.js  Riskytroves.css  Riskytroves.js  Statistics.js  mainbonds.css
App/dashboard/src/components/dashboard/: Bonds.js  Innerbonds.js  Pagebonds.js  Pool.js  Stack.js  Statistics.js  Trove.js  dashboard.css  statistics.css
App/dashboard/src/components/mainbondbuttons/: BuyModal.js  Managesol.js  SellModal.js  bufferMock.js
App/dashboard/src/components/mainbondbuttons/contractIDL/: sol_anchor_contract.json
App/dashboard/src/components/mainbondbuttons/managesol/: Borrow.js  Deposit.js  Deposit2.js  Repay.js  Rewards.js  (+3 more)
App/mainpage/: index.html  package-lock.json  package.json  setupProxy.js
App/mainpage/src/: main.jsx
App/mainpage/src/components/: Footer.jsx
App/mainpage/src/components/Nav/: Nav.jsx  nav.css
App/mainpage/src/config/: data.jsx
App/mainpage/src/pages/about/: About.jsx
client/: adminConfig.json  borrow.js  common.js  createAccounts.js  deposit.js  repay.js  test.js
programs/open_interest_protocol/: Cargo.toml
programs/open_interest_protocol/src/: lib.rs  state.rs
tests/: open_interest_protocol.ts
(+1 files in other folders)
